Replace Runtime.exec with ProcessBuilder to avoid deprecated API warning.